--- a/src/perfil.html
+++ b/src/perfil.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Profile - Bootstrap w/ Vite</title>
-    <script type="module" src="./js/profile.js"></script>
+    <script type="module" src="./js/perfil.js"></script>
 </head>
 <body>
     <div class="container py-4">
